--- a/default.css
+++ b/default.css
@@ -72,6 +72,14 @@ hr {
 	color: #555;
 	text-decoration: none;
 }
+.article-three {
+	flex: 1 1 30%;
+	margin: 10px;
+	margin-bottom: 0px;
+	min-width: 200px;
+	color: #555;
+	text-decoration: none;
+}
 
 .project-lab {
 	flex: 1 0 90%;
